# dealii

./: .gitattributes  AGENTS.md  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: linux.yml  osx.yml  windows.yml
cmake/checks/: check_02_system_features.cmake
cmake/configure/: configure_1_taskflow.cmake
cmake/macros/: macro_deal_ii_add_test.cmake  macro_deal_ii_setup_target.cmake
contrib/ci/: Jenkinsfile.tidy
contrib/utilities/: checkdoxygen.py  run_clang_tidy.sh
doc/doxygen/: options.dox.in  references.bib
doc/news/: changes.h
examples/petsc_snes_ex/: reference.py  step-40.cc
examples/step-104/: step-104.cc
examples/step-40/: step-40.cc
examples/step-40-boundary/: step-40.cc
examples/step-47/: step-47.cc
examples/step-55/: step-55.cc
examples/step-57/: CMakeLists.txt  ref_2d_erturk_u.txt  ref_2d_ghia_u.txt  step-57.cc
examples/step-63/: block_sor.prm  jacobi.prm  sor.prm  step-63.cc
examples/step-64/: CMakeLists.txt  step-63.cc  step-64.cc
examples/step-71/: step-71.cc
examples/step-9/: step-9.cc
source/: dummy.cc
source/base/: data_out_base.cc  index_set.cc  mpi.cc  partitioner.cc  timer.cc
source/distributed/: tria.cc  tria_base.cc
source/dofs/: dof_handler_policy.cc  dof_tools.inst.in
source/fe/: fe_values.cc
source/grid/: grid_out.cc  grid_out.inst.in  grid_tools.cc  grid_tools_cache.cc  grid_tools_dof_handlers.cc  grid_tools_nontemplates.cc  manifold.cc  tria.cc
source/lac/: petsc_parallel_sparse_matrix.cc  (+1 more)
tests/: run_testsuite.cmake
tests/unit-inc/: CMakeLists.txt  base.cc_  setup.sh  testing.h
(+131 files in other folders)
